--- a/index.html
+++ b/index.html
@@ -4,9 +4,51 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" href="img/favicon.png">
+    <link rel="stylesheet" href="style.css">
     <title>Splash Page</title>
 </head>
 <body>
+    <div class="wrapper">
+        <!-- logo -->
+        <img src="img/habitual-branding.png" alt="Branding logo" class="branding-img ">
+        <!-- Background toggle -->
+        <div class="background-toggles" title="Background toggle">
+            <div class="background-1" onclick="changeBackground('1')"></div>
+            <div class="background-2" onclick="changeBackground('2')"></div>
+            <div class="background-3" onclick="changeBackground('3')"></div>
+
+        </div>
+        <!-- title & text -->
+        <div class="text-container">
+            <h1 class="title">Find the stuff you’ll love.</h1>
+            <p class="text">Aliquam rhoncus pretium dolor volutpat lectus odio non tellus neque. Aliquet et purus nibh bibendum integer etiam in enim nisi.</p>
+
+            <!-- icons -->
+            <div class="apple-store">
+                <a href="https://apple.com" target="_blank">
+                    <img src="img/app-store-button.png" alt="apple store">
+                </a>
+            </div>
+            <div class="google-store">
+                <a href="https://play.google.com" target="_blank">
+                    <img src="img/google-play-button.png" alt="google store">
+                </a>
+            </div>
+        </div>
+        <!-- main image -->
+        <div class="main-img-container">
+            <img src="img/main-image.png" alt="landing image">
+        </div>
+        <!-- more images -->
+        <img src="img/profile.png" alt="profile image" class="profile-img">
+        <img src="img/orders.png" alt="orders image" class="orders-img">
+        <img src="img/home.png" alt="home image" class="home-img">
+        <img src="img/cart.png" alt="cart image" class="cart-img">
+        <img src="img/product.png" alt="product image" class="product-img">
+
+
+    </div>
     <!-- js -->
     <script src="main.js"></script>
 </body>
